syntax = "proto3";
option go_package="../game";
package game;

// 通用消息回应
message RespComm {
    int32 errcode =1 ;
    string msg = 2;  // 错误信息
}

// 0x1000心跳
message ReqHeartbeat {
    int64 timestamp = 1; // 客户端时间戳
}

// 0x1001
message RespHeartbeat {
    int32 errcode = 1;
    string msg =2;
    int64 timestamp = 3; // 服务器的时间戳
}

// 0x1002 授权验证请求
message ReqAuthorize {
    int64 uid = 1;
    int64 timestamp = 2;
    string nonce =3;
    string sign = 4;
}

// 0x1003 授权验证响应
message RespAuthorize {
    int32 errcode = 1;
    string msg = 2;
}


// 0x8004 玩家被踢通知
message NotifyKickOff {
    int64 uid=1;
    string msg = 2;
    map<string,bytes> ext = 10;
}


//MSG_ID_OTHER_LOGIN uint16 = 0x8005 //顶号
message NotifyOtherLogin {

}